# BrokeOut

./: README.md  TODO.txt  main.py  pyproject.toml  settings.py  settings.yaml
assets/levels/: levels.py
assets/sounds/music/: audio0.opus
core/: context.py  engine.py  entity_manager.py  error_handler.py  event_handler.py  event_manager.py  scene_manager.py
docs/: index.html
effects/: gaussian_blur.py  screen_shake.py
objects/: prototype.py
objects/gui/: button.py  hint.py  mouse.py
objects/level/: ball.py  brick.py  player.py  stats.py
objects/menu/: credits.py
scenes/: development.py  development_scene.py  level.py  menu.py  splash.py
shaders/: crt.glsl
systems/: audio.py  config.py  discord.py  logging.py  renderer.py
